fixing https scheme for cristin imported handles